--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.7.4",
+		"@headlessui/react": "^2.2.0",
 		"@hookform/resolvers": "^3.9.1",
 		"@prisma/client": "^6.1.0",
+		"@radix-ui/react-alert-dialog": "^1.1.5",
 		"@radix-ui/react-aspect-ratio": "^1.1.1",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.5",
@@ -43,13 +45,17 @@
 		"@reduxjs/toolkit": "^2.5.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
+		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"framer-motion": "^12.0.6",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.469.0",
 		"next": "15.1.3",
 		"next-safe-action": "^7.10.2",
 		"react": "^19.0.0",
+		"react-datepicker": "^7.6.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-redux": "^9.2.0",
