--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@reduxjs/toolkit": "^2.5.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
+		"@tippyjs/react": "^4.2.6",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -57,11 +58,15 @@
 		"react": "^19.0.0",
 		"react-datepicker": "^7.6.0",
 		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.54.2",
+		"react-intersection-observer": "^9.15.1",
 		"react-redux": "^9.2.0",
+		"react-select": "^5.10.0",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"sonner": "^1.7.2",
+		"swiper": "^11.2.1",
 		"tailwind-merge": "^2.6.0",
 		"yup": "^1.6.1",
 		"zod": "^3.24.1"
