--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
 		"framer-motion": "^12.0.6",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.469.0",
