--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"framer-motion": "^12.0.6",
+		"html2pdf.js": "^0.10.2",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.469.0",
 		"next": "15.1.3",
