--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
 		"@reduxjs/toolkit": "^2.5.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
+		"@tanstack/react-table": "^8.20.6",
 		"@tippyjs/react": "^4.2.6",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.4",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"framer-motion": "^12.0.6",
