--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
 		"@radix-ui/react-dialog": "^1.1.5",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-popover": "^1.1.5",
 		"@radix-ui/react-select": "^2.1.5",
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.2",
 		"@reduxjs/toolkit": "^2.5.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
@@ -63,6 +65,7 @@
 		"next-safe-action": "^7.10.2",
 		"react": "^19.0.0",
 		"react-datepicker": "^7.6.0",
+		"react-day-picker": "^9.5.1",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.54.2",
