--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
 		"lucide-react": "^0.469.0",
 		"next": "15.1.3",
 		"next-safe-action": "^7.10.2",
+		"nuqs": "^2.4.2",
+		"qs": "^6.14.0",
 		"react": "^19.0.0",
 		"react-datepicker": "^7.6.0",
 		"react-day-picker": "^9.5.1",
@@ -88,6 +90,7 @@
 		"@testing-library/react": "^16.1.0",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.3",
+		"@types/qs": "^6.9.18",
 		"@types/react": "^19.0.2",
 		"@types/react-dom": "^19.0.2",
 		"@types/redux-logger": "^3.0.13",
