--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@radix-ui/react-select": "^2.1.5",
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-switch": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@reduxjs/toolkit": "^2.5.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
