--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"framer-motion": "^12.0.6",
 		"html2pdf.js": "^0.10.2",
 		"jwt-decode": "^4.0.0",
+		"lottie-react": "^2.4.1",
 		"lucide-react": "^0.469.0",
 		"next": "15.1.3",
 		"next-safe-action": "^7.10.2",
