--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@radix-ui/react-switch": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@reduxjs/toolkit": "^2.5.1",
+		"@stepperize/react": "^5.1.5",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
 		"@tanstack/react-table": "^8.20.6",
