--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-switch": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.2.4",
 		"@reduxjs/toolkit": "^2.5.1",
 		"@stepperize/react": "^5.1.5",
 		"@t3-oss/env-nextjs": "^0.11.1",
@@ -62,6 +63,7 @@
 		"framer-motion": "^12.0.6",
 		"html2pdf.js": "^0.10.2",
 		"jwt-decode": "^4.0.0",
+		"lodash.debounce": "^4.0.8",
 		"lottie-react": "^2.4.1",
 		"lucide-react": "^0.469.0",
 		"next": "15.1.3",
@@ -92,6 +94,7 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.1.0",
 		"@types/jest": "^29.5.14",
+		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^22.10.3",
 		"@types/qs": "^6.9.18",
 		"@types/react": "^19.0.2",
