--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
 		"swiper": "^11.2.1",
 		"tailwind-merge": "^2.6.0",
 		"yup": "^1.6.1",
-		"zod": "^3.24.1"
+		"zod": "^3.24.1",
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.6.1",
