--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.2.4",
 		"@reduxjs/toolkit": "^2.5.1",
+		"@sparticuz/chromium-min": "^133.0.0",
 		"@stepperize/react": "^5.1.5",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
@@ -69,6 +70,8 @@
 		"next": "15.1.3",
 		"next-safe-action": "^7.10.2",
 		"nuqs": "^2.4.2",
+		"puppeteer": "^24.8.0",
+		"puppeteer-core": "^24.8.0",
 		"qs": "^6.14.0",
 		"react": "^19.0.0",
 		"react-datepicker": "^7.6.0",
