feat(fix): textarea label not clickable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,7 @@
 	},
 
 	// Custom settings
-	"cSpell.words": ["Flashlist", "Lato", "nuqs", "sonner"], // Custom words for spell checker
+	"cSpell.words": ["Flashlist", "Lato", "nuqs", "precription", "sonner"], // Custom words for spell checker
 	"tailwindCSS.experimental.classRegex": [
 		["tv\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
 	],
