feat(ui): updated done with contact

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,15 @@
 	},
 
 	// Custom settings
-	"cSpell.words": ["Flashlist", "Lato", "nuqs", "precription", "sonner"], // Custom words for spell checker
+	"cSpell.words": [
+		"Flashlist",
+		"Lato",
+		"nuqs",
+		"pemilyy",
+		"Pincode",
+		"precription",
+		"sonner"
+	], // Custom words for spell checker
 	"tailwindCSS.experimental.classRegex": [
 		["tv\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
 	],
