--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"framer-motion": "^12.0.6",
-		"html2pdf.js": "^0.10.2",
+		"html2pdf.js": "0.9.0",
 		"jwt-decode": "^4.0.0",
 		"lodash.debounce": "^4.0.8",
 		"lottie-react": "^2.4.1",
