--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test:watch": "jest --watchAll",
 		"e2e": "playwright test",
 		"e2e:ui": "playwright test --ui",
-		"prepare": "husky"
+		"prepare": "husky",
+		"analyze": "ANALYZE=true next build"
 	},
 	"husky": {
 		"hooks": {
@@ -30,7 +31,6 @@
 		]
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "^2.7.4",
 		"@hookform/resolvers": "^3.9.1",
 		"@prisma/client": "^6.1.0",
 		"@radix-ui/react-alert-dialog": "^1.1.5",
@@ -47,7 +47,6 @@
 		"@radix-ui/react-switch": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.2.4",
-		"@sparticuz/chromium-min": "^133.0.0",
 		"@stepperize/react": "^5.1.5",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.65.1",
@@ -59,7 +58,6 @@
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"framer-motion": "^12.0.6",
-		"html2pdf.js": "0.9.0",
 		"jwt-decode": "^4.0.0",
 		"lodash.debounce": "^4.0.8",
 		"lottie-react": "^2.4.1",
@@ -67,8 +65,6 @@
 		"next": "15.1.3",
 		"next-safe-action": "^7.10.2",
 		"nuqs": "^2.4.2",
-		"puppeteer": "^24.8.0",
-		"puppeteer-core": "^24.8.0",
 		"qs": "^6.14.0",
 		"react": "^19.0.0",
 		"react-day-picker": "^9.5.1",
@@ -76,17 +72,15 @@
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.54.2",
 		"react-intersection-observer": "^9.15.1",
-		"react-redux": "^9.2.0",
-		"redux-logger": "^3.0.6",
 		"sonner": "^1.7.2",
 		"tailwind-merge": "^2.6.0",
-		"yup": "^1.6.1",
 		"zod": "^3.24.1",
 		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
+		"@next/bundle-analyzer": "^15.3.3",
 		"@playwright/test": "^1.49.1",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.1.0",
