--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,4 @@ node_modules
 *.esm.js
 
 src/app/(dashboard)/user-profile/_ui/tabs/personal-details.tsx
+/src/components/pet-selection-modal/_hooks/use-stepper.ts
