--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"lucide-react": "^0.513.0",
 		"next": "15.3.3",
 		"next-safe-action": "^8.0.2",
+		"next-themes": "^0.4.6",
 		"nuqs": "^2.4.3",
 		"qs": "^6.14.0",
 		"react": "^19.1.0",
