--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
+		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.16.0",
 		"jwt-decode": "^4.0.0",
 		"lodash.debounce": "^4.0.8",
@@ -73,6 +74,7 @@
 		"react-intersection-observer": "^9.16.0",
 		"sonner": "^2.0.5",
 		"tailwind-merge": "^3.3.0",
+		"uuid": "^11.1.0",
 		"zod": "^3.25.57",
 		"zustand": "^5.0.5"
 	},
