--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"react-dropzone": "^14.3.8",
 		"react-hook-form": "^7.57.0",
 		"react-intersection-observer": "^9.16.0",
+		"sharp": "^0.34.2",
 		"sonner": "^2.0.5",
 		"tailwind-merge": "^3.3.0",
 		"uuid": "^11.1.0",
