--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"date-fns-tz": "^3.2.0",
 		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.16.0",
+		"heic-convert": "^2.1.0",
 		"jwt-decode": "^4.0.0",
 		"lodash.debounce": "^4.0.8",
 		"lottie-react": "^2.4.1",
@@ -89,6 +90,7 @@
 		"@tailwindcss/postcss": "^4.1.8",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
+		"@types/heic-convert": "^2.1.0",
 		"@types/jest": "^29.5.14",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^24.0.0",
